style.css
/*
Theme Name: Stile
Theme URI: hhttps://github.com/hendronf/Stile
Author: Fearghal Hendron
Author URI: http://fearghal.co.ul
Description: A Universal Wordpress Style Guide Theme
Version: 0.1
License: GNU General Public License v2 or later
License URI: http://www.gnu.org/licenses/gpl-2.0.html
Text Domain: stile

This theme, like WordPress, is licensed under the GPL.
Use it to make something cool, have fun, and share what you've learned with others.
*/

/* =Notes
--------------------------------------------------------------
This stylesheet uses rem values with a pixel fallback. The rem
values (and line heights) are calculated using two variables:

$rembase:     14;
$line-height: 24;

---------- Examples

* Use a pixel value with a rem fallback for font-size, padding, margins, etc.
	padding: 5px 0;
	padding: 0.357142857rem 0; (5 / $rembase)

* Set a font-size and then set a line-height based on the font-size
	font-size: 16px
	font-size: 1.142857143rem; (16 / $rembase)
	line-height: 1.5; ($line-height / 16)

---------- Vertical spacing

Vertical spacing between most elements should use 24px or 48px
to maintain vertical rhythm:

.my-new-div {
	margin: 24px 0;
	margin: 1.714285714rem 0; ( 24 / $rembase )
}

---------- Further reading

http://snook.ca/archives/html_and_css/font-size-with-rem
http://blog.typekit.com/2011/11/09/type-study-sizing-the-legible-letter/


/* =Reset
-------------------------------------------------------------- */

html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	vertical-align: baseline;
}
body {
	line-height: 1;
}
ol,
ul {
	list-style: none;
}
blockquote,
q {
	quotes: none;
}
blockquote:before,
blockquote:after,
q:before,
q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}
caption,
th,
td {
	font-weight: normal;
	text-align: left;
}
h1,
h2,
h3,
h4,
h5,
h6 {
	clear: both;
}
html {
	overflow-y: scroll;
	font-size: 100%;
	-webkit-text-size-adjust: 100%;
	-ms-text-size-adjust: 100%;
}
a:focus {
	outline: thin dotted;
}
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
nav,
section {
	display: block;
}
audio,
canvas,
video {
	display: inline-block;
}
audio:not([controls]) {
	display: none;
}
del {
	color: #333;
}
ins {
	background: #fff9c0;
	text-decoration: none;
}
hr {
	background-color: #ccc;
	border: 0;
	height: 1px;
	margin: 24px;
	margin-bottom: 1.714285714rem;
}
sub,
sup {
	font-size: 75%;
	line-height: 0;
	position: relative;
	vertical-align: baseline;
}
sup {
	top: -0.5em;
}
sub {
	bottom: -0.25em;
}
small {
	font-size: smaller;
}
img {
	border: 0;
	-ms-interpolation-mode: bicubic;
}

/* Clearing floats */
.clear:after,
.wrapper:after,
.format-status .entry-header:after {
	clear: both;
}
.clear:before,
.clear:after,
.wrapper:before,
.wrapper:after,
.format-status .entry-header:before,
.format-status .entry-header:after {
	display: table;
	content: "";
}

/* layout */

body {
	top: 0;
	right: 0;
	bottom: 0;
	left: 0;
}
.site {
	position: fixed;
	right: 0;
	left: 0;
}

.main-navigation {
	top: 0;
	bottom:0;
	left:0;
	width: 18rem;
	min-height: 100px;
	display: block;
	background-color:#e8e8e8;
	position: relative;
	float: left;
}

.main-menu-nav-container {
	margin-top: 3rem;
	display: block;
}

.nav-menu {
	width: 18rem;
	display: block;
	background-color:#e8e8e8;
	z-index: -1;
}

.nav-menu ul {
	padding: 1rem 0 1rem 1rem;
}

.site-header {
	min-height: 3rem;
	top: 0;
	width: 100%;
}

.site-search {
	width: 18rem;
	height: 3rem;
	float: left;
}

.site-description {
	padding-left: 2rem;
	margin-left: 18rem;
	padding: 0.75rem 2rem;
	font-size: 1.25rem;
	color: #fff;
	vertical-align: auto;
	font-weight: lighter;
}

.site-description a {
	color: #fff;
	font-style: italic;
	font-weight: bold;
	font-size: 1.5rem;
}

footer {
	position: fixed;
	bottom: 0;
	padding-bottom: 0.5rem;
}

.site-info{
	padding-left: 1rem;
}

#content {
	margin: 0 0 0 20rem;	
}

/*end layout*/


#s {
	border-radius: 20px;
}

.site-header {
	background-color: #39465A;
	z-index: 1;
}


blockquote {
	background-color: #eee;
	padding: 0.5rem;
	border-left: 2px solid #aaa;
	margin: 0.5rem 0;
}

article {
	margin-bottom: 2rem;
}

#searchsubmit {
	display: none;
}

#searchform	{
	padding: 0.5rem 2rem;
}

